--- a/client/web-app/public/index.html
+++ b/client/web-app/public/index.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="E-commerce app. Where you can buy goods and sell them"
+    />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
+        ::-webkit-scrollbar {
+          display: none;
+        }
+      }
+      noscript {
+        font-size: 2rem;
+        text-align: center;
+        font-family: "Oswald", sans-serif;
+        margin-top: 5rem;
+        color: #fff;
+        background-color: #000;
+        padding: 1rem;
+        border-radius: 5px;
+        box-shadow: 0 0 10px #000;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9999;
+      }
+    </style>
     <title>CampusBite</title>
   </head>
   <body>
-    <!-- Using VITE + REACT -->
-    <div id="root"></div>
-    <!-- no script -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <script type="module" src="/src/index.js"></script> -->
+    <div id="root"></div>
   </body>
 </html>
